--- a/views/cadastrarVaca.ejs
+++ b/views/cadastrarVaca.ejs
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastrar Vaca</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
