--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,8 @@ body {
     margin: 20px;
     padding: 0;
     background-color: #f4f4f4;
+    display: flex;
+    height: 100%;
   }
   
   h1 {
@@ -70,4 +72,23 @@ body {
   th {
     background-color: #f2f2f2;
   }
-  
+  .sidebar {
+    width: 250px;
+    height: 100vh;
+    background-color: #112e10;
+    padding-top: 20px;
+  }
+  .sidebar a {
+    padding: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    display: block;
+  }
+  .sidebar a:hover {
+    background-color: #37862d;
+  }
+  .content {
+    flex-grow: 1;
+    padding: 20px;
+  }
