--- a/views/cadastrarVaca.ejs
+++ b/views/cadastrarVaca.ejs
@@ -6,39 +6,59 @@
     <meta charset="UTF-8">
     <title>Cadastrar Vaca</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Cadastrar Vaca</h1>
+    <div class="sidebar">
+        <a href="/">Inicio</a>
+        <a href="/vacas">Vacas</a>
+        <a href="#">Raças</a>
+        <a href="#">Produção</a>
+        <a href="#">Financeiro</a>
+        <a href="/vacas/cadastrar">Configurações</a>
+    </div>
 
-    <% if (erros && erros.length> 0) { %>
-        <ul class="erros">
-            <% erros.forEach((erro)=> { %>
-                <li>
-                    <%= erro.msg %>
-                </li>
-                <% }) %>
-        </ul>
-        <% } %>
+    <div class="content">
+        <h1>Cadastrar Vaca</h1>
+        <% if (erros && erros.length> 0) { %>
+            <ul class="erros">
+                <% erros.forEach((erro)=> { %>
+                    <li>
+                        <%= erro.msg %>
+                    </li>
+                    <% }) %>
+            </ul>
+            <% } %>
+                <form action="/vacas/cadastrar" method="POST">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome" name="nome" value="<%= dados.nome ? dados.nome : '' %>" required>
 
-            <form action="/vacas/cadastrar" method="POST">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" value="<%= dados.nome ? dados.nome : '' %>" required>
+                    <label for="idade">Idade:</label>
+                    <input type="number" id="idade" name="idade" value="<%= dados.idade ? dados.idade : '' %>" required>
 
-                <label for="idade">Idade:</label>
-                <input type="number" id="idade" name="idade" value="<%= dados.idade ? dados.idade : '' %>" required>
-
-                <label for="raca">Raça:</label>
-                <select id="raca" name="racaId" required>
-                    <option value="">Selecione a raça</option>
-                    <% racas.forEach((raca)=> { %>
-                        <option value="<%= raca.id %>" <%=dados.racaId==raca.id ? 'selected' : '' %>><%= raca.nome %>
-                        </option>
-                        <% }) %>
-                </select>
-
-                <button type="submit">Cadastrar</button>
-            </form>
+                    <label for="raca">Raça:</label>
+                    <select id="raca" name="cod_raca" required>
+                        <option value="">Selecione a raça</option>
+                        <% racas.forEach((raca)=> { %>
+                            <option value="<%= raca.idraca %>" <%=dados.cod_raca==raca.idraca ? 'selected' : '' %>><%=
+                                    raca.nome %>
+                            </option>
+                            <% }) %>
+                    </select>
+                    <label for="raca">Estado:</label>
+                    <select name="cod_estado" id="cod_estado" required>
+                        <option value="">Selecione o estado do animal</option>
+                        <% estados.forEach((estado)=> { %>
+                            <option value="<%= estado.idestado %>" <%=dados.cod_estado==estado.idestado ? 'selected'
+                                : '' %>><%= estado.nome %>
+                            </option>
+                            <% }) %>
+                    </select>
+                    <p></p>
+                    <button type="submit">Cadastrar</button>
+                </form>
+    </div>
 </body>
 
 </html>
