--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,30 @@
         <%= titulo %>
     </title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Bem-vindo ao <%= titulo %>
-    </h1>
-    <p>Use a barra lateral para navegar pelas funcionalidades.</p>
+    <div class="sidebar">
+        <a href="/">Início</a>
+        <a href="/vacas">Vacas</a>
+        <a href="#">Raças</a>
+        <a href="#">Produção</a>
+        <a href="#">Financeiro</a>
+        <a href="/vacas/cadastrar">Configurações</a>
+    </div>
+
+    <div class="content">
+        <h1 class="mb-4">Página Principal</h1>
+        <div class="alert alert-info" role="alert">
+            Bem-vindo ao <strong>
+                <%= titulo %>
+            </strong>! Use a barra lateral para navegar pelas funcionalidades.
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
