Funcionalidade cadastro vacas concluido

--- a/views/cadastrarVaca.ejs
+++ b/views/cadastrarVaca.ejs
@@ -16,7 +16,11 @@
         <a href="#">Raças</a>
         <a href="#">Produção</a>
         <a href="#">Financeiro</a>
-        <a href="/vacas/cadastrar">Configurações</a>
+        <a href="/vacas/config">Configurações</a>
+        <ul class="submenu">
+            <li><a href="/vacas/cadastrar">Cadastrar Vaca</a></li>
+            <li><a href="#subitem2">Cadastrar Raça</a></li>
+        </ul>
     </div>
 
     <div class="content">
