--- a/views/config.ejs
+++ b/views/config.ejs
@@ -1,37 +1,32 @@
-<!-- views/index.ejs -->
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>
-        <%= titulo %>
-    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Configuração Milk Master</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
     <div class="sidebar">
-        <a href="/">Início</a>
+        <a href="/">Inicio</a>
         <a href="/vacas">Vacas</a>
         <a href="#">Raças</a>
         <a href="#">Produção</a>
         <a href="#">Financeiro</a>
         <a href="/vacas/config">Configurações</a>
+        <ul class="submenu">
+            <li><a href="/vacas/cadastrar">Cadastrar Vaca</a></li>
+            <li><a href="#subitem2">Cadastrar Raça</a></li>
+        </ul>
     </div>
-
     <div class="content">
         <h1 class="mb-4">Página Principal</h1>
         <div class="alert alert-info" role="alert">
-            Bem-vindo ao <strong>
-                <%= titulo %>
-            </strong>! Use a barra lateral para navegar pelas funcionalidades.
+            Bem-vindo ao <strong>ERP MILK MASTER!</strong>
+            <p>! Personalize da sua maneira!.</p>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </html>
