--- a/views/listarVaca.ejs
+++ b/views/listarVaca.ejs
@@ -16,7 +16,7 @@
         <a href="#">Raças</a>
         <a href="#">Produção</a>
         <a href="#">Financeiro</a>
-        <a href="/vacas/cadastrar">Configurações</a>
+        <a href="/vacas/config">Configurações</a>
     </div>
 
     <div class="content">
@@ -36,7 +36,7 @@
                 <% vacas.forEach((vaca)=> { %>
                     <tr>
                         <td>
-                            <%= vaca.id %>
+                            <%= vaca.idvaca %>
                         </td>
                         <td>
                             <%= vaca.nome %>
@@ -51,7 +51,7 @@
                             <%= vaca.Estado.nome %>
                         </td> <!-- Acesso ao nome do estado -->
                         <td>
-                            <form action="/vacas/excluir/<%= vaca.id %>" method="POST"
+                            <form action="/vacas/excluir/<%= vaca.idvaca %>" method="POST"
                                 onsubmit="return confirm('Tem certeza que deseja excluir esta vaca?');">
                                 <button type="submit" class="btn btn-danger">Excluir</button>
                             </form>
