--- a/views/cadastrarRaca.ejs
+++ b/views/cadastrarRaca.ejs
@@ -7,6 +7,7 @@
     <title>Cadastrar Raça</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
 </head>
 
 <body>
