--- a/views/config.ejs
+++ b/views/config.ejs
@@ -7,6 +7,7 @@
     <title>Configuração Milk Master</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
         </ul>
     </div>
     <div class="content">
-        <h1 class="mb-4">Configuração</h1>
+        <h1 class="mb-4">Configuração Milk Master</h1>
         <div class="alert alert-info" role="alert">
             Bem-vindo ao <strong>ERP MILK MASTER!</strong>
             <p>Personalize da sua maneira!.</p>
