--- a/views/listarVaca.ejs
+++ b/views/listarVaca.ejs
@@ -7,6 +7,7 @@
     <title>Listar Vacas</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
 </head>
 
 <body>
@@ -64,13 +65,13 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-            <!-- Div para notificações -->
-            <div id="notificationContainer" class="position-fixed" style="z-index: 1050;"></div>
+    <!-- Div para notificações -->
+    <div id="notificationContainer" class="position-fixed" style="z-index: 1050;"></div>
 
-            <!-- Incluindo Socket.IO client-side -->
-            <script src="/socket.io/socket.io.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-            <script src="/js/notification.js"></script>
+    <!-- Incluindo Socket.IO client-side -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/notification.js"></script>
 </body>
 
 </html>
