--- a/views/config.ejs
+++ b/views/config.ejs
@@ -15,7 +15,7 @@
         <button class="toggle-btn" onclick="toggleSidebar()">&#9776;</button>
         <a href="/">Início</a>
         <a href="/vacas">Vacas</a>
-        <a href="#">Produção</a>
+        <a href="/producao">Produção</a>
         <a href="/financeiro">Financeiro</a>
         <a href="/vacas/config">Configurações</a>
         <ul class="submenu">
@@ -49,5 +49,6 @@
         }
     }
 </script>
+<script src="/js/hover.js"></script>
 
 </html>
