--- a/views/financeiro.ejs
+++ b/views/financeiro.ejs
@@ -17,8 +17,12 @@
         <button class="toggle-btn" onclick="toggleSidebar()">&#9776;</button>
         <a href="/">Início</a>
         <a href="/vacas">Vacas</a>
-        <a href="#">Produção</a>
+        <a href="/producao">Produção</a>
         <a href="/financeiro">Financeiro</a>
+        <ul class="submenu">
+            <li><a href="/financeiro/contasPagar">Contas a pagar</a></li>
+            <li><a href="/financeiro/contasReceber">Contas a receber</a></li>
+        </ul>
         <a href="/vacas/config">Configurações</a>
     </div>
 
@@ -148,6 +152,7 @@
             }
         }
     </script>
+    <script src="/js/hover.js"></script>
 </body>
 
 </html>
