--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <button class="toggle-btn" onclick="toggleSidebar()">&#9776;</button>
         <a href="/">Início</a>
         <a href="/vacas">Vacas</a>
-        <a href="#">Produção</a>
+        <a href="/producao">Produção</a>
         <a href="/financeiro">Financeiro</a>
         <a href="/vacas/config">Configurações</a>
     </div>
@@ -195,6 +195,7 @@
             }
         });
     </script>
+    <script src="/js/hover.js"></script>
 </body>
 
 </html>
